--- a/static/index.html
+++ b/static/index.html
@@ -6,9 +6,9 @@
   <meta name="Author" content="">
   <meta name="Keywords" content="">
   <meta name="Description" content="">
-  <title>Document</title>
+  <title>index</title>
  </head>
  <body>
-  首页
+  <h2> 首页 </h2>
  </body>
 </html>
